--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -37,7 +37,10 @@
     "- [PicoBoi: a handheld gaming device with GPS](./Fall2022/yc938_srg293/index.html) ([video demonstration](https://www.youtube.com/watch?v=nFhp6VsxkS8&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=15))\n",
     "- [Water particle system animation](./Fall2022/ww474_yy796_yw2359/web.html) ([video demonstration](https://www.youtube.com/watch?v=SucYXxlCSMo&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=6))\n",
     "- [Trash dog](./Fall2022/tl482_yy389_zy278/index.html) ([video demonstration](https://www.youtube.com/watch?v=kw4lOBDWQUU&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=21))\n",
-    "- [Digital audio synthesizer](./Fall2022/tc575_rm722_raf269/index.html) ([video demonstration](https://www.youtube.com/watch?v=5SnrapigcxA&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=18&t=351s))"
+    "- [Digital audio synthesizer](./Fall2022/tc575_rm722_raf269/index.html) ([video demonstration](https://www.youtube.com/watch?v=5SnrapigcxA&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=18&t=351s))\n",
+    "- [Playing Minecraft with a recorder](./Fall2022/iaa34_swy6_nrb74/index.html) ([video demonstration](https://www.youtube.com/watch?v=GOPVmcFCy80&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=13&t=171s))\n",
+    "- [Retro snake game](./Fall2022/jfd232_oe36_psp43/index.html) ([video demonstration](https://www.youtube.com/watch?v=fWTaJtt8cF0&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=35))\n",
+    "- [Spatial audio murder mystery](./Fall2022/mk2592_yw575_asx3/index.html) ([video demonstration](https://www.youtube.com/watch?v=p_wtaCNrdgE&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=4))"
    ]
   },
   {
