--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -49,7 +49,8 @@
     "- [The Saga of Steve (a Zelda-inspired video game)](./Fall2022/tts47_ems395_mck65/index.html) ([video demonstration](https://www.youtube.com/watch?v=4r80cfx1C0o&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=2))\n",
     "- [Arcade game console](./Fall2022/zl348_ch682/index.html) ([video demonstration](https://www.youtube.com/watch?v=4Kxxq7x7Mew&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=34))\n",
     "- [Voice controlled machine learning](./Fall2022/tms279_zdh5_adf64/index.html) ([video demonstration](https://www.youtube.com/watch?v=UYZzhFrJK5I&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=36&t=119s))\n",
-    "- [Mario-Kart inspired racing game](./Fall2022/sko35_ns594_kg543/index.html) ([video demonstration](https://www.youtube.com/watch?v=Ji4j_eniWiQ&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=27&t=2s))"
+    "- [Mario-Kart inspired racing game](./Fall2022/sko35_ns594_kg543/index.html) ([video demonstration](https://www.youtube.com/watch?v=Ji4j_eniWiQ&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=27&t=2s))\n",
+    "- [Dino jump video game](./Fall2022/lsg84/start.html) ([video demonstration](https://www.youtube.com/watch?v=tM95_JEBvyA&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&index=29))"
    ]
   },
   {
