--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -36,7 +36,9 @@
     "- [Automated hydroponics system](./Fall2023/jnh84_lcd49/jnh84_lcd49.html) ([video demonstration](https://www.youtube.com/watch?v=3DqP95uvAP0))\n",
     "- [RPee2040](./Fall2023/nnb28_vb269/RPee2040.html) ([video demonstration](https://www.youtube.com/watch?v=75KFdw1hYbY&list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&t=2s))\n",
     "- [Microwave system for 2D and 3D imaging](./Fall2023/zl823_kg434/index.html) ([video demonstration](https://www.youtube.com/watch?v=5o7RWTJmXuE))\n",
-    "- [Stickman Ninja game](./Fall2023/av458_dht35_gwl45/index.html) ([video demonstration](https://www.youtube.com/watch?v=Lt3ESErPqRE))"
+    "- [Stickman Ninja game](./Fall2023/av458_dht35_gwl45/index.html) ([video demonstration](https://www.youtube.com/watch?v=Lt3ESErPqRE))\n",
+    "- [Interactive lightsaber](./Fall2023/bg372_jtg239/FinalProjectWebpage.html) ([video demonstration](https://www.youtube.com/watch?v=ZPBNHdnES3U))\n",
+    "- [Pico Barrier Blitz](./Fall2023/cy524_sk2794/cy524_sk2794.html) ([video demonstration](https://www.youtube.com/watch?v=YBhAH4O5zS0))"
    ]
   },
   {
