projects eight and nine

--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -38,7 +38,9 @@
     "- [Microwave system for 2D and 3D imaging](./Fall2023/zl823_kg434/index.html) ([video demonstration](https://www.youtube.com/watch?v=5o7RWTJmXuE))\n",
     "- [Stickman Ninja game](./Fall2023/av458_dht35_gwl45/index.html) ([video demonstration](https://www.youtube.com/watch?v=Lt3ESErPqRE))\n",
     "- [Interactive lightsaber](./Fall2023/bg372_jtg239/FinalProjectWebpage.html) ([video demonstration](https://www.youtube.com/watch?v=ZPBNHdnES3U))\n",
-    "- [Pico Barrier Blitz](./Fall2023/cy524_sk2794/cy524_sk2794.html) ([video demonstration](https://www.youtube.com/watch?v=YBhAH4O5zS0))"
+    "- [Pico Barrier Blitz](./Fall2023/cy524_sk2794/cy524_sk2794.html) ([video demonstration](https://www.youtube.com/watch?v=YBhAH4O5zS0))\n",
+    "- [Realtime audio spectrogram analyzer](./Fall2023/hy592_yx623_tl839/index.html) ([video demonstration](https://www.youtube.com/watch?v=C8ed5-WB-MY&t=10s))\n",
+    "- [Pond water simulation](./Fall2023/tic3_mmh257/FinalReport.html)"
    ]
   },
   {
