projects ten and eleven

--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -40,7 +40,9 @@
     "- [Interactive lightsaber](./Fall2023/bg372_jtg239/FinalProjectWebpage.html) ([video demonstration](https://www.youtube.com/watch?v=ZPBNHdnES3U))\n",
     "- [Pico Barrier Blitz](./Fall2023/cy524_sk2794/cy524_sk2794.html) ([video demonstration](https://www.youtube.com/watch?v=YBhAH4O5zS0))\n",
     "- [Realtime audio spectrogram analyzer](./Fall2023/hy592_yx623_tl839/index.html) ([video demonstration](https://www.youtube.com/watch?v=C8ed5-WB-MY&t=10s))\n",
-    "- [Pond water simulation](./Fall2023/tic3_mmh257/FinalReport.html)"
+    "- [Pond water simulation](./Fall2023/tic3_mmh257/FinalReport.html)\n",
+    "- [Electromagnet robot](./Fall2023/wf223_hw768/index.html) ([video demonstration](https://www.youtube.com/watch?v=G_COTIjia5Q))\n",
+    "- [Autonomous luggage following system](./Fall2023/yg585_yz2952/yg585_yz2952.html) ([video demonstration](https://www.youtube.com/watch?v=UMxiqASDjy0))"
    ]
   },
   {
