--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -45,7 +45,9 @@
     "- [Autonomous luggage following system](./Fall2023/yg585_yz2952/yg585_yz2952.html) ([video demonstration](https://www.youtube.com/watch?v=UMxiqASDjy0))\n",
     "- [Audio tracking with soundar](./Fall2023/app67_dtt34/final.html) ([video demonstration](https://www.youtube.com/watch?v=l8RQH72cvqk))\n",
     "- [Etch-A-Sketch](./Fall2023/jcs556_sd954_hh759/index.html) ([video demonstration](https://www.youtube.com/watch?v=LVCq2VqcC4U))\n",
-    "- [Piano Tiles 2](./Fall2023/rg764_sa2236_wc556/report.html) ([video demonstration](https://www.youtube.com/watch?v=_98jwv7Dm7Q))"
+    "- [Piano Tiles 2](./Fall2023/rg764_sa2236_wc556/report.html) ([video demonstration](https://www.youtube.com/watch?v=_98jwv7Dm7Q))\n",
+    "- [Kinetic molecular theory with particles](./Fall2023/mp2235_cc2535/index.html) ([video demonstration](https://www.youtube.com/watch?v=LiEpu315REc))\n",
+    "- [ATARI's Pong Reimagined](./Fall2023/dms489_kw462/FinalProjectAtarisPongReimagined.html) ([video demonstration](https://www.youtube.com/watch?v=Qivx0E62YHA))"
    ]
   },
   {
