--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -72,7 +72,9 @@
     "- [Hand conductor](./Fall2023/lsl95_kz85/index.html) ([video description](https://www.youtube.com/watch?v=HCNzZyf06as))\n",
     "- [Pico says](./Fall2023/ml2226_cca54/index.html) ([video description](https://www.youtube.com/watch?v=BNBXwJf55fs))\n",
     "- [MIDI input synthesizer](./Fall2023/pbb65/pbb65homepage.html) ([video description](https://www.youtube.com/watch?v=gv6tslaxl0o))\n",
-    "- [Soundweaver](./Fall2023/rdg244_ewz4/index.html) ([video description](https://www.youtube.com/watch?v=427vY8pIdWY))"
+    "- [Soundweaver](./Fall2023/rdg244_ewz4/index.html) ([video description](https://www.youtube.com/watch?v=427vY8pIdWY))\n",
+    "- [Watermelon game](./Fall2023/yl2924_yl996/index.html) ([video description](https://www.youtube.com/watch?v=ZxyzBawe35w))\n",
+    "- [Gyroscope-controlled labrynth game](./Fall2023/ks977_zl647_yf372/index.html) ([video description](https://www.youtube.com/watch?v=onVuS9nOsp4))"
    ]
   },
   {
