--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Final projects for [ECE 4760/5730](https://ece4760.github.io)\n",
     "\n",
-    "This webpage links student-generated webpages describing their final projects for [ECE 4760/5730](https://ece4760.github.io) at Cornell University."
+    "This webpage links student-generated webpages describing their final projects for [ECE 4760/5730](https://ece4760.github.io) at Cornell University. Instructed by [V. Hunter Adams](https://vanhunteradams.com)."
    ]
   },
   {
