--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -45,7 +45,8 @@
     "8. [WiFi Bike Navigation](./Fall2025/wss58/report.html) ([video demonstration](https://www.youtube.com/watch?v=F_KyAHahVyI))\n",
     "9. [Persistence of Vision Wand](./Fall2025/gz284_cl2865_xp92/index.html) ([video demonstration](https://youtu.be/efiZZ-5N_8k))\n",
     "10. [Virtual pinball with sonar and muscle IR inputs](./Fall2025/th737_kj349/DSDFinalLabReport.html) ([video demonstration](https://youtu.be/fEmvvQ-iMaA))\n",
-    "11. [CodeBuddy Timmy Educational Robot](./Fall2025/mp965_jk2998/index.html) ([video demonstration](https://youtu.be/teVmPDNyPdc))"
+    "11. [CodeBuddy Timmy Educational Robot](./Fall2025/mp965_jk2998/index.html) ([video demonstration](https://youtu.be/teVmPDNyPdc))\n",
+    "12. [PicoChess](./Fall2025/sl2847_zrs29_khy32/index.html) ([video demonstration](https://youtu.be/cyuMKzzZeAY))"
    ]
   },
   {
