--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -46,7 +46,8 @@
     "9. [Persistence of Vision Wand](./Fall2025/gz284_cl2865_xp92/index.html) ([video demonstration](https://youtu.be/efiZZ-5N_8k))\n",
     "10. [Virtual pinball with sonar and muscle IR inputs](./Fall2025/th737_kj349/DSDFinalLabReport.html) ([video demonstration](https://youtu.be/fEmvvQ-iMaA))\n",
     "11. [CodeBuddy Timmy Educational Robot](./Fall2025/mp965_jk2998/index.html) ([video demonstration](https://youtu.be/teVmPDNyPdc))\n",
-    "12. [PicoChess](./Fall2025/sl2847_zrs29_khy32/index.html) ([video demonstration](https://youtu.be/cyuMKzzZeAY))"
+    "12. [PicoChess](./Fall2025/sl2847_zrs29_khy32/index.html) ([video demonstration](https://youtu.be/cyuMKzzZeAY))\n",
+    "13. [Bebe the emotive bipedal robot](./Fall2025/ph475_rq36_wm345/index.html) ([video demonstration](https://youtu.be/vSiIo-Cqozk))"
    ]
   },
   {
