--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -56,7 +56,9 @@
     "19. [Vision-guided Ball Catcher](./Fall2025/yc2832_vsc32/index.html) ([video demonstration](https://youtu.be/ZalUMAx4A78))\n",
     "20. [ScopeBoy: Handheld Mixed-Domain Oscilloscope](./Fall2025/rwl228_iv74/index.html) ([video demonstration](https://youtu.be/MxbmWoJlQEc))\n",
     "21. [Ultrasonic 2D Object Mapping and Predictive Tracking System](./Fall2025/tt549_rdp78/final_project.html) ([video demonstration](https://youtu.be/WmSY0NXBI08))\n",
-    "22. [Flappy Bird](./Fall2025/hn347_scz6_ma969/index.html) ([video demonstration](https://youtu.be/TWBTzghpsnY))"
+    "22. [Flappy Bird](./Fall2025/hn347_scz6_ma969/index.html) ([video demonstration](https://youtu.be/TWBTzghpsnY))\n",
+    "23. [Cornell Tower Defense](./Fall2025/mwc87_rry9/index.html) ([video demonstration](https://youtu.be/jrui2HFuquc))\n",
+    "24. [Autonomous Handwriting Robot](./Fall2025/ste27_sz498/website.html)"
    ]
   },
   {
