--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -58,7 +58,9 @@
     "21. [Ultrasonic 2D Object Mapping and Predictive Tracking System](./Fall2025/tt549_rdp78/final_project.html) ([video demonstration](https://youtu.be/WmSY0NXBI08))\n",
     "22. [Flappy Bird](./Fall2025/hn347_scz6_ma969/index.html) ([video demonstration](https://youtu.be/TWBTzghpsnY))\n",
     "23. [Cornell Tower Defense](./Fall2025/mwc87_rry9/index.html) ([video demonstration](https://youtu.be/jrui2HFuquc))\n",
-    "24. [Autonomous Handwriting Robot](./Fall2025/ste27_sz498/website.html)"
+    "24. [Autonomous Handwriting Robot](./Fall2025/ste27_sz498/website.html)\n",
+    "25. MiniSLAM Robot (private upon request)\n",
+    "26. [Customizable computer mouse](./Fall2025/iab35_lg634/webpage/main.html)"
    ]
   },
   {
