--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -67,7 +67,8 @@
     "30. [Text to speech](./Fall2025/yz3545_hy665_qz425/index.html) ([video demonstration](https://youtu.be/l-Kj-9ZnBKY))\n",
     "31. [Physical PocketChess](./Fall2025/mi266_cl2367/index.html)\n",
     "32. [SpectroTuner](./Fall2025/aph74_jbc282/index.html) ([video demonstration](https://youtu.be/ck99bB3yAcM))\n",
-    "33. [3D Orientation Mouse](./Fall2025/am2736_sp2222/index.html) ([video demonstration](https://youtu.be/Hqhhgok1frU))"
+    "33. [3D Orientation Mouse](./Fall2025/am2736_sp2222/index.html) ([video demonstration](https://youtu.be/Hqhhgok1frU))\n",
+    "34. [Autonomous Drawing Car](./Fall2025/sjz44_glk49_rcw253/final_report.html) ([video demonstration](https://youtu.be/8FTqkum7d4I))"
    ]
   },
   {
