--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -75,7 +75,8 @@
     "38. [Automated Test Equipment](./Fall2025/my394_dmp282_xz834/index.html)\n",
     "39. [Pico WiiMote](./Fall2025/eu52_fn72/index.html) ([video demonstration](https://youtu.be/qxkjN0_n0uU))\n",
     "40. [Snake-Inspired Game](./Fall2025/dcp243_jk2878/writeup.html) ([video demonstration](https://youtu.be/Gj2DFg01Oc0))\n",
-    "41. [Logic Analyzer](./Fall2025/jk2582_cjm369_mlh348/index.html)"
+    "41. [Logic Analyzer](./Fall2025/jk2582_cjm369_mlh348/index.html)\n",
+    "42. [Star tracker](./Fall2025/akk85_dv258_jws434/index.html) ([video demonstration](https://youtu.be/mN4AUj1KYqI))"
    ]
   },
   {
