--- a/Projects/Projects.ipynb
+++ b/Projects/Projects.ipynb
@@ -76,7 +76,8 @@
     "39. [Pico WiiMote](./Fall2025/eu52_fn72/index.html) ([video demonstration](https://youtu.be/qxkjN0_n0uU))\n",
     "40. [Snake-Inspired Game](./Fall2025/dcp243_jk2878/writeup.html) ([video demonstration](https://youtu.be/Gj2DFg01Oc0))\n",
     "41. [Logic Analyzer](./Fall2025/jk2582_cjm369_mlh348/index.html)\n",
-    "42. [Star tracker](./Fall2025/akk85_dv258_jws434/index.html) ([video demonstration](https://youtu.be/mN4AUj1KYqI))"
+    "42. [Star tracker](./Fall2025/akk85_dv258_jws434/index.html) ([video demonstration](https://youtu.be/mN4AUj1KYqI))\n",
+    "43. [Pandora's Box Epidemic Simulator](./Fall2025/md2236_yy2236/index.html) ([video demonstration](https://youtu.be/46gfggSQE6U))"
    ]
   },
   {
